SymbolsCode/helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-helloworld
spec:
  type: NodePort
  selector:
    app: nginx-helloworld
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000
