SymbolsCode/helloworld/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nginx-helloworld-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
    - host: hello-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-helloworld
                port:
                  number: 80
